--- a/the second phase of your web app/Mathakari-Chinmay Nandkishor_hw3_secondPhaseOfApp_invesmentPortfolio.html
+++ b/the second phase of your web app/Mathakari-Chinmay Nandkishor_hw3_secondPhaseOfApp_invesmentPortfolio.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Chinmay Mathakari </title>
-     <link rel="stylesheet" type="text/css" href="Mathakari-Chinmay Nandkishor_hw2-firstApp.css">
+     <link rel="stylesheet" type="text/css" href="Mathakari-Chinmay Nandkishor_hw3_secondPhaseOfApp.css">
     <link rel="preconnect" href="https://fonts.gstatic.com"> -->
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1          ,600;1,700&display=swap"
